5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4428/executions/1594_1802.log
== TEST (2019-04-22 18:38:10) 
-- CODE:
P = int(input("Pontos de Vida: ")
D1 = int(input("Dado 1: "))
D2 = int(input("Dado 2: "))

from math import*
dano = [(sqrt(5*D1))+(pi**D2/3)]
-- ERROR:
File "XXXX", line 2
    D1 = int(input())
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 18:39:07) 
-- CODE:
P = int(input("Pontos de Vida: "))
D1 = int(input("Dado 1: "))
D2 = int(input("Dado 2: "))

from math import*
dano = [(sqrt(5*D1))+(pi**D2/3)]

print(dano)
-- OUTPUT:
[322.6991325026012]
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 18:40:58) 
-- CODE:
P = int(input("Pontos de Vida: "))
D1 = int(input("Dado 1: "))
D2 = int(input("Dado 2: "))

from math import*
dano = [(sqrt(5*D1))+(pi**D2/3)]

restante = P - dano

print(restante)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    restante = P - dano
TypeError: unsupported operand type(s) for -: 'int' and 'list'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 18:42:22) 
-- CODE:
P = int(input("Pontos de Vida: "))
D1 = int(input("Dado 1: "))
D2 = int(input("Dado 2: "))

from math import*
dano = (sqrt(5*D1))+(pi**D2/3)

restante = P - dano

print(restante)
-- OUTPUT:
-122.69913250260117
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 18:42:55) 
-- CODE:
P = int(input("Pontos de Vida: "))
D1 = int(input("Dado 1: "))
D2 = int(input("Dado 2: "))

from math import*
dano = int(sqrt(5*D1))+(pi**D2/3)

restante = P - dano

print(restante)
-- OUTPUT:
-122.4630645251014
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 18:44:18) 
-- CODE:
P = int(input("Pontos de Vida: "))
D1 = int(input("Dado 1: "))
D2 = int(input("Dado 2: "))

from math import*
dano = int(sqrt(5*D1))+((pi**3)**D2)

restante = P - dano

print(restante)
-- OUTPUT:
-888582205.0712627
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 18:47:01) 
-- CODE:
P = int(input("Pontos de Vida: "))
D1 = int(input("Dado 1: "))
D2 = int(input("Dado 2: "))

from math import*
dano = int[(sqrt(5*D1))+((pi**3)**D2)]

restante = P - dano

print(restante)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    dano = int[(sqrt(5*D1))+((pi**3)**D2)]
TypeError: 'type' object is not subscriptable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 18:47:24) 
-- CODE:
P = int(input("Pontos de Vida: "))
D1 = int(input("Dado 1: "))
D2 = int(input("Dado 2: "))

from math import*
dano = [(sqrt(5*D1))+((pi**3)**D2)]

restante = P - dano

print(restante)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    restante = P - dano
TypeError: unsupported operand type(s) for -: 'int' and 'list'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 18:52:36) 
-- CODE:
P = int(input("Pontos de Vida: "))
D1 = int(input("Dado 1: "))
D2 = int(input("Dado 2: "))

from math import*
dano = (sqrt(5*D1))+((pi**D2)**3)

restante = P - dano

print(restante)
-- OUTPUT:
-888582205.3073308
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 18:55:32) 
-- CODE:
P = int(input("Pontos de Vida: "))
D1 = int(input("Dado 1: "))
D2 = int(input("Dado 2: "))

from math import*
dano = (sqrt(5*D1)+(pi**3*D2))

restante = P - dano

print(restante)
-- OUTPUT:
11.72627194070131
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 18:56:13) 
-- CODE:
P = int(input("Pontos de Vida: "))
D1 = int(input("Dado 1: "))
D2 = int(input("Dado 2: "))

from math import*
dano = (sqrt(5*D1)+(pi**(3*D2)))

restante = P - dano

print(restante)
-- OUTPUT:
-888582205.3073307
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
